--- a/Actividades.html
+++ b/Actividades.html
@@ -99,7 +99,7 @@
 			</div>
 
 			<div class="row" id="other_downloads">
-				<h3 class="col-lg-12">Avtiddes</h3>
+				<h3 class="col-lg-12">Actividades</h3>
 				<div class="col-xs-6 col-sm-3 col-md-3">
 					<a href="Ac1Aprendiendo.html" class="thumbnail">
 						<img src="images/true.jpg">
